--- a/index.html
+++ b/index.html
@@ -3,10 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Ronaldo Deschain | Personal Portfolio</title>
+    <meta name="description" content="Portfolio of Ronaldo Deschain - Developer, technology enthusiast, and lifelong learner.">
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f6f8fa;
+            color: #222;
+        }
+        header {
+            background: #24292f;
+            color: #fff;
+            padding: 2rem 0;
+            text-align: center;
+        }
+        .avatar {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            border: 4px solid #fff;
+            margin-bottom: 1rem;
+            background: #fff;
+            object-fit: cover;
+        }
+        main {
+            max-width: 700px;
+            margin: 2rem auto;
+            background: #fff;
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 4px 16px rgba(36,41,47,0.04);
+        }
+        h1, h2 {
+            margin-top: 0;
+        }
+        nav {
+            margin-top: 1.5rem;
+            margin-bottom: 2rem;
+            text-align: center;
+        }
+        nav a {
+            color: #0366d6;
+            text-decoration: none;
+            margin: 0 1rem;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        .projects ul {
+            list-style: none;
+            padding-left: 0;
+        }
+        .projects li {
+            margin-bottom: 1rem;
+            padding-bottom: 0.5rem;
+            border-bottom: 1px solid #eee;
+        }
+        .projects a {
+            color: #24292f;
+            font-weight: bold;
+        }
+        .projects a:hover {
+            color: #0366d6;
+        }
+        @media (max-width: 600px) {
+            main {
+                padding: 1rem;
+            }
+        }
+    </style>
 </head>
 <body>
-    <p>Fazendo os primeiros testes com o site aqui :D</p></p:>
-    
+    <header>
+        <!-- You can upload your avatar to your repo and link here, or use your GitHub profile picture -->
+        <img src="https://avatars.githubusercontent.com/u/ronaldodeschain?v=4" alt="Ronaldo Deschain Avatar" class="avatar" />
+        <h1>Ronaldo Deschain</h1>
+        <p>Developer | Technology Enthusiast | Lifelong Learner</p>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>
+                Hello! I'm Ronaldo Deschain, passionate about technology, coding, and building things that make a difference. 
+                I enjoy learning new tools and frameworks, and sharing my journey with others.
+            </p>
+        </section>
+        <section id="projects" class="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li>
+                    <a href="https://github.com/ronaldodeschain/ronaldodeschain.github.io" target="_blank">This Portfolio</a> &mdash; The code for this portfolio site.
+                </li>
+                <!-- Add more projects below -->
+                <!--
+                <li>
+                    <a href="https://github.com/ronaldodeschain/your-project" target="_blank">Project Name</a> &mdash; Short project description.
+                </li>
+                -->
+            </ul>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>
+                You can find me on 
+                <a href="https://github.com/ronaldodeschain" target="_blank">GitHub</a>
+                <!-- | <a href="mailto:your.email@example.com">Email</a> -->
+            </p>
+        </section>
+    </main>
 </body>
 </html>
