--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
     <header>
         <!-- You can upload your avatar to your repo and link here, or use your GitHub profile picture -->
-        <img src="https://avatars.githubusercontent.com/u/ronaldodeschain?v=4" alt="Ronaldo Deschain Avatar" class="avatar" />
+        <img src="https://avatars.githubusercontent.com/u/67172445?v=4" alt="Ronaldo Deschain Avatar" class="avatar" />
         <h1>Ronaldo Deschain</h1>
         <p>Developer | Technology Enthusiast | Lifelong Learner</p>
         <nav>
