Ajustando o texto para português e arrumando erro gramatical

--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
 <body>
     <header>  
         <img src="https://avatars.githubusercontent.com/u/67172445?v=4" alt="Ronaldo Deschain Avatar" class="avatar" />
-        <h1>Ronaldo Deschain</h1>
+        <h1>Ronaldo Lemos</h1>
         <p>Desenvolvedor | Entusiasta de Tecnologia | Eterno Aprendiz</p>
         <nav>
             <a href="#">Sobre mim</a>
             <a href="#">Projetos</a>
-            <a href="#">Contaco</a>
+            <a href="#">Contato</a>
         </nav>
     </header>
     <main>
         <section id="about">
             <h2>Sobre mim</h2>
             <p>
-                Hello! I'm Ronaldo Deschain, passionate about technology, coding, and building things that make a difference. 
-                I enjoy learning new tools and frameworks, and sharing my journey with others.
+                Ola! Eu sou o Ronaldo Lemos da Silva, um desenvolvedor apaixonado por tecnologia, codar, e criar
+                aplicações que façam a diferença. 
+                Eu gosto de aprender novas ferramentas e frameworks, e compartilhar minha jornada com os outros. Esse processo
+                expande meu conhecimento e ajuda a quebrar paradigmas.                
             </p>
         </section>
         <section id="projects" class="projects">
